hphp/hack/test/typecheck/reified_generics/funciton_call_missing_reified_generics1.php.exp
File "funciton_call_missing_reified_generics1.php", line 8, characters 7-9:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "hackarray.hhi", line 15, characters 22-24:
Definition is here
File "funciton_call_missing_reified_generics1.php", line 9, characters 7-9:
All type arguments must be specified because a type parameter is reified (Typing[4303])
File "funciton_call_missing_reified_generics1.php", line 4, characters 7-9:
Definition is here
